Refactor transaction table for no data

--- a/src/components/tables/transactionTable/transactionTable.module.css
+++ b/src/components/tables/transactionTable/transactionTable.module.css
@@ -4,6 +4,11 @@
     cursor: pointer;
 }
 
+td.noData {
+    color: var(--textSecondary);
+    text-align: center;
+}
+
 .moreActions {
     color: var(--textSecondary);
 }
