Improve copy to clipboard hover

--- a/src/components/copyToClipboard/copyToClipboard.module.css
+++ b/src/components/copyToClipboard/copyToClipboard.module.css
@@ -3,6 +3,7 @@
     transition: stroke 200ms var(--fastOutSlowIn);
 
     &:hover {
+        cursor: pointer;
         stroke: var(--text);
     }
 }
