--- a/src/components/memo/memo.module.css
+++ b/src/components/memo/memo.module.css
@@ -12,6 +12,7 @@
 
 .content {
     display: flex;
+    align-items: center;
     padding: var(--unit) calc(1.5 * var(--unit));
     border-radius: var(--roundedSmall);
     background: var(--surface);
@@ -19,12 +20,4 @@
     font-size: var(--fontSizeSm);
     font-weight: 400;
     gap: var(--unit);
-}
-
-.icon {
-    margin-top: calc(0.25 * var(--unit));
-}
-
-.memo {
-    overflow-wrap: anywhere;
 }
