--- a/src/components/views/blockView/blockView.module.css
+++ b/src/components/views/blockView/blockView.module.css
@@ -2,4 +2,9 @@
     /* FIXME: !important workaround for CSS import order issue */
     --viewGradientStartColor: rgba(83, 174, 168, 0.25) !important;
     --viewGradientStopColor: rgba(83, 174, 168, 0.025) !important;
+
+    .placeholderTable {
+        padding: 0;
+        border-radius: var(--roundedSmall);
+    }
 }
