Refactor breadcrumbs and add tests

--- a/src/components/breadcrumbs/breadcrumbs.module.css
+++ b/src/components/breadcrumbs/breadcrumbs.module.css
@@ -5,22 +5,6 @@
     gap: var(--unit);
 }
 
-.breadcrumb {
-    font-family: var(--fontSecondary);
-    font-size: var(--fontSize3Xl);
-    font-weight: 500;
-}
-
-.separator,
-.breadcrumb[href] {
+.separator {
     color: var(--textSecondary);
-}
-
-.breadcrumb[href] {
-    text-decoration: none;
-    transition: color 200ms var(--fastOutSlowIn);
-
-    &:hover {
-        color: var(--text);
-    }
 }
