--- a/src/app/transactions/[transactionId]/page.module.css
+++ b/src/app/transactions/[transactionId]/page.module.css
@@ -1,4 +1,4 @@
-.root {
+.view {
     /* FIXME: !important workaround for CSS import order issue */
     --viewGradientStartColor: rgba(193, 166, 204, 0.25) !important;
     --viewGradientStopColor: rgba(193, 166, 204, 0.025) !important;
