--- a/src/components/tables/blockTable/blockTable.module.css
+++ b/src/components/tables/blockTable/blockTable.module.css
@@ -1,5 +1,6 @@
-.dataRow:hover {
-    /* FIXME: !important workaround for CSS import order issue */
-    background: rgba(83, 174, 168, 0.15) !important;
-    cursor: pointer;
+.root {
+    tbody tr:hover {
+        background: rgba(83, 174, 168, 0.15);
+        cursor: pointer;
+    }
 }
