--- a/src/components/tables/blockTable/blockTable.module.css
+++ b/src/components/tables/blockTable/blockTable.module.css
@@ -3,4 +3,9 @@
         background: rgba(83, 174, 168, 0.15);
         cursor: pointer;
     }
+
+    th:last-child,
+    td:last-child {
+        text-align: right;
+    }
 }
