--- a/src/lib/css/variables.css
+++ b/src/lib/css/variables.css
@@ -17,6 +17,7 @@
     --surface: rgba(250, 250, 250, 0.05);
     --surfaceLight: rgba(250, 250, 250, 0.1);
     --surfaceLighter: rgba(250, 250, 250, 0.15);
+    --surfaceDisable: rgba(10, 10, 10, 0.6);
     --primary: #ba4d14;
     --primaryLight: #f49c43;
     --secondaryLight: #53aea8;
