--- a/src/components/pagination/pagination.module.css
+++ b/src/components/pagination/pagination.module.css
@@ -1,5 +1,15 @@
 .root {
     display: flex;
+    align-items: center;
     justify-content: center;
     gap: calc(3 * var(--unit));
+
+    .button {
+        font-weight: 400;
+    }
+
+    .pages {
+        color: var(--textSecondary);
+        font-size: var(--fontSizeSm);
+    }
 }
