Use Formik to handle search form state

--- a/src/components/search/search.module.css
+++ b/src/components/search/search.module.css
@@ -25,6 +25,7 @@
     background: var(--surface);
     color: var(--textSecondary);
     font: var(--fontPrimary) var(--fontSizeBase);
+    transition: outline 200ms var(--fastOutSlowIn);
 
     &:focus {
         outline: solid 2px var(--textSecondary);
