--- a/src/components/search/search.module.css
+++ b/src/components/search/search.module.css
@@ -37,7 +37,6 @@
     position: absolute;
     z-index: 1;
     top: calc(8 * var(--unit));
-    display: none;
     width: 100%;
     height: 276px;
     padding: calc(3 * var(--unit));
@@ -45,4 +44,12 @@
     border-radius: var(--roundedSmall);
     backdrop-filter: blur(var(--blurXl));
     background: rgba(34, 99, 98, 0.1);
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 200ms var(--fastOutSlowIn);
+
+    &.visible {
+        opacity: 1;
+        pointer-events: auto;
+    }
 }
