Implement search query and clickable results

--- a/src/components/search/searchResults/searchResults.module.css
+++ b/src/components/search/searchResults/searchResults.module.css
@@ -42,5 +42,11 @@
         &:not(:last-child) {
             border-bottom: 1px solid var(--surfaceLighter);
         }
+
+        a {
+            color: inherit;
+            pointer-events: auto;
+            text-decoration: none;
+        }
     }
 }
