--- a/src/components/tables/table/table.module.css
+++ b/src/components/tables/table/table.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     padding: calc(3 * var(--unit));
     border-radius: var(--rounded);
-    backdrop-filter: blur(var(--blurXl));
+    backdrop-filter: blur(var(--blurFull));
     background: var(--surface);
     gap: calc(2 * var(--unit));
 }
