--- a/src/lib/css/variables.css
+++ b/src/lib/css/variables.css
@@ -29,11 +29,15 @@
     --pageMinWidth: 1200px;
     --pageMaxWidth: 1600px;
     --pageNarrowWidth: 752px;
+    --zIndexOverlay: 10;
+    --zIndexSticky: 20;
+    --zIndexModal: 30;
+
+    /* Animation and effects */
+    --blur: 32px;
+    --blurFull: 64px;
+    --fastOutSlowIn: cubic-bezier(0.4, 0, 0.2, 1);
     --rounded: 16px;
     --roundedSmall: 8px;
     --roundedFull: 9999px;
-
-    /* Animation and effects */
-    --blurXl: 64px;
-    --fastOutSlowIn: cubic-bezier(0.4, 0, 0.2, 1);
 }
