--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -8,7 +8,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    backdrop-filter: blur(var(--blur)) brightness(50%);
+    backdrop-filter: blur(var(--blurSmall)) brightness(50%);
     background: var(--surface);
 }
 
