Implement empty state

--- a/src/components/tables/transactionTable/transactionTable.module.css
+++ b/src/components/tables/transactionTable/transactionTable.module.css
@@ -4,7 +4,7 @@
         border-radius: var(--roundedSmall);
     }
 
-    tbody tr:hover {
+    tbody tr:not(.empty):hover {
         background: var(--hoverPurple);
         cursor: pointer;
     }
