--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -11,7 +11,8 @@
     grid-template: auto auto / repeat(6, 1fr);
 
     & > :nth-child(-n + 3) {
-        grid-column: span 2;
+        /*grid-column: span 2;*/
+        grid-column: span 3;
     }
 
     & > :nth-child(n + 4) {
