--- a/src/components/panels/panel/panel.module.css
+++ b/src/components/panels/panel/panel.module.css
@@ -1,17 +1,17 @@
 .root {
     --panelGradientStartColor: rgba(174, 174, 174, 0.25);
-    --panelGradientStopColor: rgba(174, 174, 174, 0.025);
+    --panelGradientStopColor: rgba(174, 174, 174, 0.03);
     display: grid;
     height: 196px;
     padding: calc(3 * var(--unit));
     border-radius: var(--rounded);
     backdrop-filter: blur(var(--blurFull));
-    background-color: var(--surface);
-    background-image: radial-gradient(
+    background: radial-gradient(
         100% 100% at 0% 0%,
         var(--panelGradientStartColor) 0%,
         var(--panelGradientStopColor) 100%
     );
+
     grid-template: 1fr 1fr / 1fr 1fr;
 }
 
