--- a/src/components/panels/transactionPanel/transactionPanel.module.css
+++ b/src/components/panels/transactionPanel/transactionPanel.module.css
@@ -1,7 +1,6 @@
-.root {
-    /* FIXME: !important workaround for CSS import order issue */
-    --panelGradientStartColor: rgba(244, 156, 67, 0.25) !important;
-    --panelGradientStopColor: rgba(244, 156, 67, 0.025) !important;
+.root.gradient {
+    --panelGradientStartColor: rgba(244, 156, 67, 0.25);
+    --panelGradientStopColor: rgba(244, 156, 67, 0.025);
 }
 
 .chart {
