Refactor data helpers and implement UM price

--- a/src/components/navigationBar/navigationBar.module.css
+++ b/src/components/navigationBar/navigationBar.module.css
@@ -56,7 +56,11 @@
         color: var(--textSecondary);
     }
 
-    .movement {
-        color: var(--successLight);
+    .positive {
+        color: var(--positiveLight);
+    }
+
+    .negative {
+        color: var(--negativeLight);
     }
 }
