--- a/src/lib/css/variables.css
+++ b/src/lib/css/variables.css
@@ -22,7 +22,8 @@
     --primary: #ba4d14;
     --primaryLight: #f49c43;
     --secondaryLight: #53aea8;
-    --successLight: #55d383;
+    --positiveLight: #55d383;
+    --negativeLight: #f17878;
     --hoverGreen: rgba(83, 174, 168, 0.15);
     --hoverPurple: rgba(193, 166, 204, 0.15);
 
