Add copy to clipboard to block page for height

--- a/src/app/block/[height]/page.module.css
+++ b/src/app/block/[height]/page.module.css
@@ -4,3 +4,8 @@
         --viewGradientStopColor: rgba(83, 174, 168, 0.025);
     }
 }
+
+.copyToClipboard {
+    margin-right: -2px;
+    color: var(--text);
+}
