--- a/src/components/parameters/parameter/parameter.module.css
+++ b/src/components/parameters/parameter/parameter.module.css
@@ -13,3 +13,9 @@
     flex: 1;
     border-bottom: 1px dashed var(--surfaceLighter);
 }
+
+.value {
+    display: inline-flex;
+    align-items: center;
+    gap: calc(0.5 * var(--unit));
+}
