Refactor link styles

--- a/src/lib/css/main.css
+++ b/src/lib/css/main.css
@@ -21,3 +21,12 @@ body {
     font-size: var(--fontSizeBase);
     line-height: 1.5;
 }
+
+a {
+    text-decoration: none;
+    transition: color 200ms var(--fastOutSlowIn);
+
+    &:hover {
+        color: var(--primaryLight);
+    }
+}
