--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -20,6 +20,7 @@
 
     &:hover:not(.disabled) {
         background: var(--surfaceLight);
+        color: var(--text);
     }
 
     &:active:not(.disabled) {
