--- a/src/components/search/searchResult/searchResult.module.css
+++ b/src/components/search/searchResult/searchResult.module.css
@@ -16,4 +16,8 @@
     color: inherit;
     gap: calc(0.5 * var(--unit));
     text-decoration: none;
+
+    &:hover {
+        color: inherit;
+    }
 }
