Fix inconsistencies with design mockups

--- a/src/components/navigationBar/navigationBar.module.css
+++ b/src/components/navigationBar/navigationBar.module.css
@@ -1,10 +1,14 @@
 .root {
     display: grid;
-    height: calc(11 * var(--unit));
+    height: calc(9.5 * var(--unit));
     align-items: center;
     padding-right: calc(4 * var(--unit));
     padding-left: calc(4 * var(--unit));
     grid-template-columns: 1fr 1fr 1fr;
+}
+
+.logo {
+    display: inline-flex;
 }
 
 .group {
