Implement table row and refactor tables

--- a/src/components/tables/blockTable/blockTable.module.css
+++ b/src/components/tables/blockTable/blockTable.module.css
@@ -1,11 +1,14 @@
 .root {
-    tbody tr:hover {
-        background: var(--hoverGreen);
-        cursor: pointer;
-    }
-
     th:last-child,
     td:last-child {
         text-align: right;
+    }
+}
+
+.clickableRow {
+    cursor: pointer;
+
+    &:hover {
+        background: var(--hoverGreen);
     }
 }
