--- a/src/components/tables/blockTable/blockTable.module.css
+++ b/src/components/tables/blockTable/blockTable.module.css
@@ -1,14 +1,13 @@
 .root {
-    th:last-child,
-    td:last-child {
-        text-align: right;
+    .clickableRow {
+        cursor: pointer;
+
+        &:hover {
+            background: var(--hoverGreen);
+        }
     }
-}
 
-.clickableRow {
-    cursor: pointer;
-
-    &:hover {
-        background: var(--hoverGreen);
+    .lastCell {
+        text-align: right;
     }
 }
