--- a/src/components/tables/transactionTable/transactionTable.module.css
+++ b/src/components/tables/transactionTable/transactionTable.module.css
@@ -1,13 +1,15 @@
-.root.embedded {
-    padding: 0;
-    border-radius: var(--roundedSmall);
-}
+.root {
+    &.embedded {
+        padding: 0;
+        border-radius: var(--roundedSmall);
+    }
 
-.clickableRow {
-    cursor: pointer;
+    .clickableRow {
+        cursor: pointer;
 
-    &:hover {
-        background: var(--hoverPurple);
+        &:hover {
+            background: var(--hoverPurple);
+        }
     }
 }
 
