Fix Tailwind unpure selector error

--- a/src/components/tables/table/tableCell/tableCell.module.css
+++ b/src/components/tables/table/tableCell/tableCell.module.css
@@ -7,7 +7,7 @@
     vertical-align: middle;
     white-space: nowrap;
 
-    > * {
+    & > * {
         vertical-align: middle;
 
         &:not(:last-child) {
