--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -26,6 +26,7 @@
     background: var(--surfaceLight);
     color: #fff;
     cursor: pointer;
+    transition: background 200ms var(--fastOutSlowIn);
 
     &:hover {
         background: var(--surfaceLighter);
