--- a/src/components/tabs/tabs.module.css
+++ b/src/components/tabs/tabs.module.css
@@ -6,5 +6,6 @@
     align-items: center;
     padding: 0 calc(2 * var(--unit));
     border-radius: calc(var(--height) / 2);
+    backdrop-filter: blur(var(--blurLarge));
     background: var(--surface);
 }
