--- a/src/components/tables/table/tableRow/tableRow.module.css
+++ b/src/components/tables/table/tableRow/tableRow.module.css
@@ -1,3 +1,12 @@
+.root.clickable {
+    cursor: pointer;
+    transition: background 200ms var(--fastOutSlowIn);
+
+    &:hover {
+        background: var(--surface);
+    }
+}
+
 thead .root {
     border-bottom: 1px solid var(--surfaceLighter);
 }
