--- a/src/components/tables/table/table.module.css
+++ b/src/components/tables/table/table.module.css
@@ -6,6 +6,7 @@
     backdrop-filter: blur(var(--blurLarge));
     background: var(--surface);
     gap: calc(2 * var(--unit));
+    overflow-x: auto;
 }
 
 .header {
