--- a/src/components/tabs/tab/tab.module.css
+++ b/src/components/tabs/tab/tab.module.css
@@ -9,7 +9,7 @@
         rgba(186, 77, 20, 0.35) 0%,
         rgba(186, 77, 20, 0) 95%
     );
-    background-position-y: var(--height);
+    background-position-y: 36px;
     background-repeat: no-repeat;
     color: var(--textSecondary);
     font-size: var(--fontSizeSm);
