--- a/src/lib/css/global.css
+++ b/src/lib/css/global.css
@@ -1,6 +1,5 @@
 @import "tailwindcss";
 @import "./animations.css";
-@import "./variables.css";
 
 /* https://tailwindcss.com/docs/theme */
 @theme {
@@ -33,6 +32,23 @@
     --text-3xl--line-height: 2.5rem;
     --text-4xl: 2.25rem;
     --text-4xl--line-height: 2.75rem;
+
+    --text: #fafafa;
+    --textSecondary: #a3a3a3;
+    --textDisabled: #6a6a6a;
+    --surface: rgba(250, 250, 250, 0.05);
+    --surfaceLight: rgba(250, 250, 250, 0.1);
+    --surfaceLighter: rgba(250, 250, 250, 0.15);
+    --surfaceDisabled: rgba(19, 19, 19, 0.64);
+    --primary: #ba4d14;
+    --primaryLight: #f49c43;
+    --secondaryLight: #53aea8;
+    --positiveLight: #55d383;
+    --negativeLight: #f17878;
+    --hoverGreen: rgba(83, 174, 168, 0.15);
+    --hoverPurple: rgba(193, 166, 204, 0.15);
+
+    --fastOutSlowIn: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* https://tailwindcss.com/docs/preflight#extending-preflight */
